zellij-integration-tests/tests/snapshots/clients__resizing_one_client_does_not_disturb_the_other_clients_tab-2.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&second_grid))
---
 Zellij (test)  Tab #1 [ ] Tab #2  + 
$ twotwo█
 Ctrl + g  p  t  n  h  s  o  q    Alt +  <n> New Pane  <f> Floating 
