zellij-integration-tests/tests/snapshots/clients__resizing_one_client_does_not_disturb_the_other_clients_tab.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&main_grid_before_resize))
---
 Zellij (test)  Tab #1  Tab #2 [ ] + 
$ oneone█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
