zellij-integration-tests/tests/snapshots/clients__two_clients_of_different_sizes_on_different_tabs_render_independently-2.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&second_grid))
---
 Zellij (test)  Tab #1 [ ] Tab #2  + 
$ twotwo█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT            Alt +  <n> New Pane  <f> Floating 
